--- a/Bayesian_inference_1/Bayes.bib
+++ b/Bayesian_inference_1/Bayes.bib
@@ -3196,3 +3196,152 @@
   issn        = "1532-4435",
   original_id = "325118bf-5488-0cc7-a833-a63e1ba58762"
 }
+
+@ARTICLE{Glaudas2019-qc,
+  title    = "Foraging mode, relative prey size and diet breadth: A
+              phylogenetically explicit analysis of snake feeding ecology",
+  author   = "Glaudas, Xavier and Glennon, Kelsey L and Martins, Marcio and
+              Luiselli, Luca and Fearn, Simon and Trembath, Dane F and Jelić,
+              Dušan and Alexander, Graham J",
+  abstract = "Foraging modes (ambush vs. active foraging) are often correlated
+              with a suite of morphological, physiological, behavioural and
+              ecological traits known as the ``adaptive syndrome'' or
+              ``syndrome hypothesis.'' In snakes, an ecological correlate often
+              reported in the literature is that ambush-hunting snakes have a
+              higher relative meal size compared to actively foraging snakes
+              which feed on smaller prey items. This ``large meal versus small
+              meal'' feeding hypothesis between ambush and active foragers has
+              become a widely accepted paradigm of snake feeding ecology,
+              despite the fact that no rigorous meta-analysis has been
+              conducted to support this generalization. We conducted a
+              phylogenetically explicit meta-analysis, which included ca. 100
+              species, to test this paradigm of snake feeding ecology. We
+              gathered data on prey size by inducing regurgitation by palpation
+              in free-ranging snakes and by examining the stomach contents of
+              preserved museum specimens. When we found prey, we recorded both
+              snake and prey mass to estimate relative prey mass (prey
+              mass/snake mass). We also reviewed published studies of snake
+              feeding ecology to gather similar information for other species.
+              Ambush and active foragers did not differ in minimum or average
+              meal size but the maximum meal sizes consumed by ambush-foraging
+              snakes were larger than the maximum meal sizes eaten by active
+              foragers. This results in ambush-foraging snakes consuming a
+              significantly wider range of meal sizes, rather than being large
+              meal specialists compared to active foragers. We argue that
+              ambush foragers evolved to be more opportunistic predators
+              because they encounter prey less frequently compared to active
+              foragers. This hypothesis is further supported by the fact that
+              ambush foragers also exhibited marginally wider diet breadths,
+              consuming a broader range of prey types in comparison with active
+              foragers. Our study challenges aspects of the foraging syndrome
+              as it is currently conceived, and our results have important
+              implications for our understanding of how foraging mode has
+              shaped the behaviour and physiology of ambush-foraging snakes.",
+  journal  = "J. Anim. Ecol.",
+  volume   =  88,
+  number   =  5,
+  pages    = "757--767",
+  month    =  may,
+  year     =  2019,
+  url      = "http://dx.doi.org/10.1111/1365-2656.12972",
+  keywords = "Alethinophidia; Serpentes; active foragers; ambush foragers; meal
+              size; sit-and-wait foragers;Module - Bayes",
+  language = "en",
+  issn     = "0021-8790, 1365-2656",
+  pmid     = "30828806",
+  doi      = "10.1111/1365-2656.12972"
+}
+
+@ARTICLE{Hastings1970-gr,
+  title       = "Monte Carlo Sampling Methods Using Markov Chains and Their
+                 Applications",
+  author      = "Hastings, W K",
+  abstract    = "[A generalization of the sampling method introduced by
+                 Metropolis et al. (1953) is presented along with an exposition
+                 of the relevant theory, techniques of application and methods
+                 and difficulties of assessing the error in Monte Carlo
+                 estimates. Examples of the methods, including the generation
+                 of random orthogonal matrices and potential applications of
+                 the methods to numerical problems arising in statistics, are
+                 discussed.]",
+  journal     = "Biometrika",
+  publisher   = "[Oxford University Press, Biometrika Trust]",
+  volume      =  57,
+  number      =  1,
+  pages       = "97--109",
+  year        =  1970,
+  url         = "http://www.jstor.org/stable/2334940",
+  keywords    = "Module - Bayes",
+  issn        = "0006-3444",
+  doi         = "10.2307/2334940",
+  original_id = "25b2586b-495a-05bb-969d-36a9c4cbec5b"
+}
+
+@ARTICLE{Kruschke2010-wi,
+  title    = "What to believe: Bayesian methods for data analysis",
+  author   = "Kruschke, John K",
+  abstract = "Although Bayesian models of mind have attracted great interest
+              from cognitive scientists, Bayesian methods for data analysis
+              have not. This article reviews several advantages of Bayesian
+              data analysis over traditional null-hypothesis significance
+              testing. Bayesian methods provide tremendous flexibility for data
+              analytic models and yield rich information about parameters that
+              can be used cumulatively across progressive experiments. Because
+              Bayesian statistical methods can be applied to any data,
+              regardless of the type of cognitive model (Bayesian or otherwise)
+              that motivated the data collection, Bayesian methods for data
+              analysis will continue to be appropriate even if Bayesian models
+              of mind lose their appeal.",
+  journal  = "Trends Cogn. Sci.",
+  volume   =  14,
+  number   =  7,
+  pages    = "293--300",
+  month    =  jul,
+  year     =  2010,
+  url      = "http://dx.doi.org/10.1016/j.tics.2010.05.001",
+  keywords = "Module - Bayes",
+  language = "en",
+  issn     = "1364-6613, 1879-307X",
+  pmid     = "20542462",
+  doi      = "10.1016/j.tics.2010.05.001"
+}
+
+@ARTICLE{Kruschke2012-sb,
+  title     = "The Time Has Come: Bayesian Methods for Data Analysis in the
+               Organizational Sciences",
+  author    = "Kruschke, John K and Aguinis, Herman and Joo, Harry",
+  abstract  = "The use of Bayesian methods for data analysis is creating a
+               revolution in fields ranging from genetics to marketing. Yet,
+               results of our literature review, including more than 10,000
+               articles published in 15 journals from January 2001 and December
+               2010, indicate that Bayesian approaches are essentially absent
+               from the organizational sciences. Our article introduces
+               organizational science researchers to Bayesian methods and
+               describes why and how they should be used. We use multiple
+               linear regression as the framework to offer a step-by-step
+               demonstration, including the use of software, regarding how to
+               implement Bayesian methods. We explain and illustrate how to
+               determine the prior distribution, compute the posterior
+               distribution, possibly accept the null value, and produce a
+               write-up describing the entire Bayesian process, including
+               graphs, results, and their interpretation. We also offer a
+               summary of the advantages of using Bayesian analysis and
+               examples of how specific published research based on frequentist
+               analysis-based approaches failed to benefit from the advantages
+               offered by a Bayesian approach and how using Bayesian analyses
+               would have led to richer and, in some cases, different
+               substantive conclusions. We hope that our article will serve as
+               a catalyst for the adoption of Bayesian methods in
+               organizational science research.",
+  journal   = "Organizational Research Methods",
+  publisher = "SAGE Publications Inc",
+  volume    =  15,
+  number    =  4,
+  pages     = "722--752",
+  month     =  oct,
+  year      =  2012,
+  url       = "https://doi.org/10.1177/1094428112457829",
+  keywords  = "Module - Bayes",
+  issn      = "1094-4281",
+  doi       = "10.1177/1094428112457829"
+}
