--- a/Bayesian_inference_1/3.1-Modular_models.qmd
+++ b/Bayesian_inference_1/3.1-Modular_models.qmd
@@ -14,6 +14,7 @@ format:
     show-slide-number: all
     link-external-newwindow: true
 bibliography: Bayes.bib
+csl: evolution.csl
 ---
 
 ## This week
