--- a/Bayesian_inference_1/3.4-Drawing_conclusions.qmd
+++ b/Bayesian_inference_1/3.4-Drawing_conclusions.qmd
@@ -184,7 +184,7 @@ Approaches
 
 . . .
 
-You still have to make subjective decisions (what CI level?).
+More in Week 5
 
 
 ## HDPI bands
@@ -192,6 +192,8 @@ You still have to make subjective decisions (what CI level?).
 Predict across a range of `log10SVL` for each level of `ForagingMode`.
 
 ```{r}
+#| echo: true
+
 pred_values <- crossing(
   log10SVL = seq(1.3, 2.5, length.out = 100),
   ForagingMode = levels(Snakes$ForagingMode)
@@ -218,11 +220,54 @@ str(p_pred)
 
 ## Computing credible intervals
 
+- Calculate median and 89% quantile ($\sim$ HDI)
+- `apply()` across the columns (`MARGIN = 2`)
+
 ```{r}
 #| echo: true
+#| output-location: slide
 
-post <- post |> 
-  mutate(median_prediction = apply(p_pred, margin = 2, median))
+pred_values <- pred_values |> 
+  mutate(median_pred = apply(p_pred, MARGIN = 2, FUN = median),
+         lower = apply(p_pred, MARGIN = 2, FUN = quantile, prob = 0.055),
+         upper = apply(p_pred, MARGIN = 2, FUN = quantile, prob = 0.945))
+pred_values
+```
+
+
+## Plotting credible intervals
+
+```{r}
+#| echo: true
+#| output-location: slide
+
+ggplot() +
+  geom_point(data = Snakes, aes(log10SVL, RPM, color = ForagingMode),
+             size = 3) +
+  geom_ribbon(data = pred_values,
+              aes(x = log10SVL, ymin = lower, ymax = upper,
+                  fill = ForagingMode), alpha = 0.25) +
+  geom_line(data = pred_values,
+            aes(x = log10SVL, y = median_pred, color = ForagingMode)) +
+  scale_color_manual(values = c("red", "blue")) +
+  scale_fill_manual(values = c("red", "blue"))
+```
+
+
+## Plotting credible intervals
+
+```{r}
+ggplot() +
+  geom_point(data = Snakes, aes(log10SVL, RPM, color = ForagingMode),
+             size = 3) +
+  geom_ribbon(data = pred_values,
+              aes(x = log10SVL, ymin = lower, ymax = upper,
+                  fill = ForagingMode), alpha = 0.25) +
+  geom_line(data = pred_values,
+            aes(x = log10SVL, y = median_pred, color = ForagingMode)) +
+  scale_color_manual(values = c("red", "blue")) +
+  scale_fill_manual(values = c("red", "blue")) +
+  facet_grid(ForagingMode ~ .)
 ```
 
 
