Fix typo in wk 4

--- a/Data_visualization/4.3-Dynamic_plot_creation.qmd
+++ b/Data_visualization/4.3-Dynamic_plot_creation.qmd
@@ -68,7 +68,7 @@ M
 ## Working with lists
 
 - Lists can hold any kind of R object
-- Easy to crate empty lists and fill 
+- Easy to create empty lists and fill 
 
 ```{r}
 #| echo: true
