--- a/Data_visualization/5.3-Complex_operations.qmd
+++ b/Data_visualization/5.3-Complex_operations.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Complex plot operations"
-subtitle: "Here is a strange plot things we have done before"
+subtitle: "Here are some strange plot things we have done before"
 author:
   - Elizabeth King
   - Kevin Middleton
